--- a/bid.html
+++ b/bid.html
@@ -119,7 +119,7 @@
             }
             document.getElementById('current_bid_type_id').innerHTML = `&nbsp;&nbsp;&nbsp;${gameDetails.market_fullname} - ` + currentBidType
         </script>
-        <div class="d-flex justify-content-between mt-4">
+        <div class="mt-4" style="display: flex;justify-content: space-between;" id="open_close_id">
             <div class="bid_open_close_btn">
                 <div class="form-check ">
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </div>
-        <div class="bid_input_box mt-4 pt-2 pl-4 pr-4 pb-2">
+        <div class="bid_input_box mt-4 pt-2 pl-4 pr-4 pb-2" id="bid_inupt_boxs">
             <div class="d-flex justify-content-between position-relative">
                 <span id="digit_input_field_id"></span>
                 <input type="number" placeholder="Enter Point" id="bid_point_input">
@@ -151,10 +151,14 @@
             </div>
         </div>
         <script>
+            let bid_inupt_boxs = document.getElementById('bid_inupt_boxs')
             if (currentBidType == 'SD') {
                 document.getElementById('digit_input_field_id').innerHTML = `<input type="text" placeholder="Enter Digit" maxlength="1"
                     oninput="this.value=this.value.replace(/[^0-9]/g,'');" id="input_field_digit" />`
             } else if (currentBidType == 'JD') {
+                document.getElementById('open_close_id').style.display = "none"
+                bid_inupt_boxs.style.height = '130px'
+                bid_inupt_boxs.style.marginBottom = '50px'
                 document.getElementById('digit_input_field_id').innerHTML = `<input type="text" placeholder="Enter Digit" maxlength="2"
                     oninput="this.value=this.value.replace(/[^0-9]/g,'');" id="input_field_digit" />`
             } else if (currentBidType == 'SP' || currentBidType == 'DP' || currentBidType == 'TP' || currentBidType == 'HS' || currentBidType == 'FS') {
@@ -287,6 +291,7 @@
                     return
                 }
                 let game_type = 'open'
+                if (currentBidType == "JD") game_type = ""
                 let flexRadioDefault2 = document.getElementById('flexRadioDefault2').checked
                 if (flexRadioDefault2) {
                     game_type = 'close'
@@ -343,6 +348,7 @@
 
             // If the count down is over, write some text 
             if (distance < 0) {
+                location.href = "home.html";
                 clearInterval(x);
                 document.getElementById("countdown_id").innerHTML = "0h : 0m : 0s";
             }
