Change some images

--- a/contact-us.html
+++ b/contact-us.html
@@ -105,7 +105,7 @@
                     Contact us for a quote,<br />help or to join the team.
                 </p>
             </div>
-            <img src="./assets/images/contactusbanner.webp" alt="" style="flex-basis: 60%;margin-right: -10px;">
+            <img src="./assets/images/contactusbanner.svg" alt="" style="flex-basis: 60%;margin-right: -10px;height: 160px;">
         </div>
         <div class="contactus_main_container">
             <div class="sub_contact  ">
