Changing images continue

--- a/home.html
+++ b/home.html
@@ -175,8 +175,8 @@
                                 let timeRemain = calculateTimeRemain(gameList[i]?.market_closetime)
                                 ongoingTabContent.innerHTML = ongoingTabContent.innerHTML +
                                     `<div class="ongoing_card">` +
-                                    `<img src="./assets/shapes/openRectangle.png" class="game_card_label" alt="Ongoing card">` +
-                                    `<img src="./assets/shapes/gameplaybtn.png" onclick="
+                                    `<img src="./assets/shapes/openRectangle.svg" class="game_card_label" alt="Ongoing card">` +
+                                    `<img src="./assets/shapes/gameplaybtn.svg" onclick="
                                         ${sessionStorage.setItem('gameDetails', JSON.stringify(gameList[i]))}
                                         navigate('game.html')
                                     " class="game_card_play_btn open_game_button" alt="Game play">` +
@@ -189,8 +189,8 @@
                             case 'close':
                                 ongoingTabContent.innerHTML = ongoingTabContent.innerHTML +
                                     `<div class="ongoing_card">
-                                        <img src="./assets/shapes/closeRectangle.png" class="game_card_label" alt="Ongoing card">
-                                        <img src="./assets/shapes/gameplaybtn.png" class="game_card_play_btn closed_game_btn"  alt="Game play">
+                                        <img src="./assets/shapes/closeRectangle.svg" class="game_card_label" alt="Ongoing card">
+                                        <img src="./assets/shapes/gameplaybtn.svg" class="game_card_play_btn closed_game_btn"  alt="Game play">
                                          <h4>${gameList[i]?.market_fullname}</h4>
                                         <small><b>${gameList[i]?.result}</b></small>
                                         <div>
