--- a/home.html
+++ b/home.html
@@ -165,6 +165,7 @@
             updateWallet()
             startLoader()
             axiosInstance.get('home').then((response) => {
+                console.log(response)
                 endLoader()
                 if (response.status === 200) {
                     let gameList = response.data.game_list
