--- a/win-history.html
+++ b/win-history.html
@@ -134,7 +134,7 @@
             axiosInstance.get('winning_history').then((response) => {
                 endLoader()
                 if (response.status === 200) {
-                    document.getElementById('total_winning_amount').innerHTML = response?.data?.total_winning_amount
+                    document.getElementById('total_winning_amount').innerHTML = `₹${response?.data?.total_winning_amount}`
                     let transactionList = response.data.winning_history
                     let transaction_container = document.getElementById('transaction_container')
                     transaction_container.innerHTML = ''
@@ -146,7 +146,7 @@
                         <i class="fa fa-plus" aria-hidden="true"></i>
                     </div>
                     <div
-                        style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
+                        style="display: flex; flex-basis: 85%; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
                         <div>
                             <h6>${element?.transaction_name}</h6>
                             <small>${convertDateAndTime(element?.created_at)}</small>
