--- a/passbook.html
+++ b/passbook.html
@@ -274,7 +274,7 @@
                                 `
                         <div class="transaction_card">
                         <div class="transaction_avatar_div winning_avatar">
-                            <i class="fa fa-minus" aria-hidden="true"></i>
+                            <i class="fa fa-plus" aria-hidden="true"></i>
                         </div>
                         <div
                             style="flex-basis: 85%;display: flex; justify-content: space-between;border-bottom: 1px solid gray;padding-bottom: 5px;">
@@ -283,7 +283,7 @@
                                 <small>${convertDateAndTime(element?.created_at)}</small>
                             </div>
                             <div>
-                                <p class="float-right"><b>- ₹${element?.transaction_amount}</b><img src="./assets/shapes/clarity_wallet-line.svg"
+                                <p class="float-right"><b>+ ₹${element?.transaction_amount}</b><img src="./assets/shapes/clarity_wallet-line.svg"
                                         class="ml-1" height="14px" alt=""></p>
                                 <p style="margin-top: -8px;font-size: 11px;font-weight: 500;">Balance : ${element?.amount_in_wallet}</p>
                             </div>
