Fix all timing issue and redirect to home page after market close

--- a/bid.html
+++ b/bid.html
@@ -521,7 +521,7 @@
 
             // If the count down is over, write some text 
             if (distance < 0) {
-                // location.href = "home.html";
+                location.href = "home.html";
                 clearInterval(x);
                 document.getElementById("countdown_id").innerHTML = "0h : 0m : 0s";
             }
